--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.example.petra.healthylifeapp.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+
+        <Button
+            android:id="@+id/btn_show_subscriptions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Show Subscriptions"/>
+        <Button
+            android:id="@+id/btn_cancel_subscriptions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cancel Subscriptions"/>
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
