--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,9 +26,13 @@
         <Button
             android:id="@+id/button_viewHistory"
             android:layout_height="wrap_content"
-            android:layout_width="270dp"
+            android:layout_width="140dp"
             android:text="@string/buttonHistoryText"/>
-
+        <Button
+            android:id="@+id/button_showCalendar"
+            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:text="@string/button_showcalendar_text"/>
 
 
     </LinearLayout>
