Pages Configured? Maybe.. Offline enabled?

--- a/app/src/main/res/menu/action_buttons.xml
+++ b/app/src/main/res/menu/action_buttons.xml
@@ -10,4 +10,9 @@
         android:id="@+id/googleSetup"
         android:title="Google Setup"
         app:showAsAction="collapseActionView" />
+
+    <item
+        android:id="@+id/logout"
+        android:title="Logout"
+        app:showAsAction="collapseActionView" />
 </menu>
