--- a/app/src/main/res/layout/content_configure_profile.xml
+++ b/app/src/main/res/layout/content_configure_profile.xml
@@ -16,7 +16,11 @@
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="368dp"
