--- a/app/src/main/res/layout/content_firebase_login.xml
+++ b/app/src/main/res/layout/content_firebase_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.petra.healthylifeapp.FirebaseLogin"
+    tools:context="com.example.petra.healthylifeapp.DBMaintenance.FirebaseLogin"
     tools:showIn="@layout/activity_firebase_login">
 
 
