--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -13,6 +13,7 @@
         android:id="@+id/notifiation_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_weight="30"
         android:padding="20dp"
         android:src="@mipmap/ic_launcher" />
@@ -20,25 +21,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="30"
+        android:layout_weight="50"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtNotificationText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.35"
             android:gravity="center"
             android:text="Notification"
             android:textColor="@color/com_facebook_likeboxcountview_text_color"
-            android:textSize="18sp" />
+            android:textSize="10sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="20dp"
             android:layout_margin="10dp"
-            android:layout_weight="1"
             android:orientation="horizontal">
 
             <Button
@@ -48,7 +48,7 @@
                 android:layout_weight="1"
                 android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
                 android:drawableLeft="@mipmap/snooze"
-                android:text="@string/snooze"
+                android:text="Snooze"
                 android:textColor="@color/com_facebook_likeboxcountview_text_color" />
 
             <Button
@@ -58,10 +58,10 @@
                 android:layout_weight="1"
                 android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
                 android:drawableLeft="@mipmap/accept"
-                android:text="@string/accept_action"
+                android:text="Accept"
                 android:textColor="@color/com_facebook_likeboxcountview_text_color" />
         </LinearLayout>
-
     </LinearLayout>
+
 
 </LinearLayout>
