confiure profile fixed

--- a/app/src/main/res/menu/action_buttons.xml
+++ b/app/src/main/res/menu/action_buttons.xml
@@ -11,8 +11,8 @@
         android:title="Google Setup"
         app:showAsAction="collapseActionView" />
 
-    <item
-        android:id="@+id/logout"
-        android:title="Logout"
-        app:showAsAction="collapseActionView" />
+    <!--<item-->
+        <!--android:id="@+id/logout"-->
+        <!--android:title="Logout"-->
+        <!--app:showAsAction="collapseActionView" />-->
 </menu>
