--- a/app/src/main/res/layout/activity_configure_profile.xml
+++ b/app/src/main/res/layout/activity_configure_profile.xml
@@ -17,7 +17,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="HealthyLife App" />
+
+            app:title="@string/app_name" />
 
     </android.support.design.widget.AppBarLayout>
 
