--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.petra.healthylifeapp.MainActivity">
+    tools:context="com.example.petra.healthylifeapp.MainActivity"
+    android:background="@mipmap/background">
     <RelativeLayout
 
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
@@ -17,46 +18,91 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <LinearLayout
             android:id="@+id/layout_steps"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="150dp"
 
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
 
-        <TextView
-            android:id="@+id/title_text_view"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="00"
-            android:textSize="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="8dp" />
-
-
-
-        <Button
-            android:id="@+id/button_viewHistory"
+            <Button
+                android:id="@+id/button_viewHistory"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:background="@mipmap/button_history"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="20dp"/>
+        <RelativeLayout
+            android:id="@+id/layout_ateps"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:layout_width="130dp"
-            android:text="@string/buttonHistoryText"/>
-        <Button
-            android:id="@+id/button_showCalendar"
-            android:layout_height="match_parent"
-            android:layout_width="130dp"
-            android:text="@string/button_showcalendar_text" />
+
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp"
+            android:background="@mipmap/steps_counter">
+
+            <LinearLayout
+                android:id="@+id/layout_stepCount"
+                android:layout_width="wrap_content"
+                android:layout_height="95dp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="8dp">
+
+                    <TextView
+                        android:id="@+id/title_text_view"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="8852"
+                        android:textSize="38dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        tools:layout_editor_absoluteY="0dp"
+                        tools:layout_editor_absoluteX="8dp"
+                        android:layout_marginTop="45dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_stepGoal"
+                android:layout_width="wrap_content"
+                android:layout_height="75dp"
+                android:layout_marginTop="35dp">
+                    <TextView
+                        android:id="@+id/title_text_stepsGoal"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="GOAL:"
+                        android:textSize="10dp"
+                        android:textColor="#f9913d"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        tools:layout_editor_absoluteY="0dp"
+                        tools:layout_editor_absoluteX="8dp"
+                        android:layout_marginTop="50dp"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+            <Button
+                android:id="@+id/button_showCalendar"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:background="@mipmap/button_calendar"
+                android:layout_marginTop="20dp"/>
+
+
+
         </LinearLayout>
 
 <LinearLayout
     android:id="@+id/layout_exs_left"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="220dp"
     android:layout_below="@id/layout_steps"
     android:orientation="vertical">
 
@@ -65,36 +111,45 @@
         <LinearLayout
             android:id="@+id/layout_exs1"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="70dp"
 
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
-
-            <TextView
-                android:id="@+id/text_view_squat"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="Squats 1min"
-                android:textSize="15dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                tools:layout_editor_absoluteY="0dp"
-                tools:layout_editor_absoluteX="8dp"
-                android:layout_alignParentLeft="true"/>
 
             <CheckBox
                 android:id="@+id/rbtn_squat"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:text=""
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"/>
 
-            <TextView
-                android:id="@+id/text_view_burpees"
-                android:layout_width="130dp"
+            <ImageView
+                android:id="@+id/image_view_squat"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Burpees 1min"
-                android:textSize="15dp"
+                android:src="@mipmap/workout_1_squats"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                tools:layout_editor_absoluteY="0dp"
+                tools:layout_editor_absoluteX="8dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"/>
+
+            <CheckBox
+                android:id="@+id/rbtn_burpees"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"/>
+
+            <ImageView
+                android:id="@+id/image_view_burpees"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/workout_4_burpees"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
@@ -102,11 +157,7 @@
                 tools:layout_editor_absoluteX="8dp"
                 android:layout_alignParentRight="true" />
 
-            <CheckBox
-                android:id="@+id/rbtn_burpees"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:text="" />
+
 
 
         </LinearLayout>
@@ -115,91 +166,104 @@
         <LinearLayout
             android:id="@+id/layout_exs2"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="70dp"
             android:layout_below="@id/layout_exs1"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
-
-            <TextView
-                android:id="@+id/text_view_jumpingjack"
-                android:layout_width="130dp"
+            <CheckBox
+                android:id="@+id/rbtn_jumping"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="Jumping Jack 1min"
-                android:textSize="15dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                tools:layout_editor_absoluteY="0dp"
-                tools:layout_editor_absoluteX="8dp" />
-        <CheckBox
-            android:id="@+id/rbtn_jumping"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:text="" />
-
-            <TextView
-                android:id="@+id/text_view_pushups"
-                android:layout_width="130dp"
+                android:text=""
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"/>
+            <ImageView
+                android:id="@+id/image_view_jumping"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Pushups 1min"
-                android:textSize="15dp"
+                android:src="@mipmap/workout_2_jjacks"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 tools:layout_editor_absoluteY="0dp"
                 tools:layout_editor_absoluteX="8dp"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"/>
 
             <CheckBox
                 android:id="@+id/rbtn_pushups"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:text=""
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"/>
+
+            <ImageView
+                android:id="@+id/image_view_pushups"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/workout_5_pushups"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                tools:layout_editor_absoluteY="0dp"
+                tools:layout_editor_absoluteX="8dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"/>
+
+
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layout_exs3"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="70dp"
             android:layout_below="@id/layout_exs2"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
-            <TextView
-                android:id="@+id/text_view_mountain"
-                android:layout_width="130dp"
+            <CheckBox
+                android:id="@+id/rbtn_mountain"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="Mountain climbers 1min"
-                android:textSize="15dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                tools:layout_editor_absoluteY="0dp"
-                tools:layout_editor_absoluteX="8dp" />
-        <CheckBox
-            android:id="@+id/rbtn_mountain"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:text="" />
+                android:text=""
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"/>
 
-            <TextView
-                android:id="@+id/text_view_situps"
-                android:layout_width="130dp"
+            <ImageView
+                android:id="@+id/image_view_mountatin"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Situps 1min"
-                android:textSize="15dp"
+                android:src="@mipmap/workout_3_mclimbers"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 tools:layout_editor_absoluteY="0dp"
                 tools:layout_editor_absoluteX="8dp"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"/>
 
             <CheckBox
                 android:id="@+id/rbtn_situps"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:text=""
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"/>
+            <ImageView
+                android:id="@+id/image_view_situps"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/workout_6_situps"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                tools:layout_editor_absoluteY="0dp"
+                tools:layout_editor_absoluteX="8dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"/>
+
+
         </LinearLayout>
 
 </LinearLayout>
@@ -209,9 +273,10 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp"
-        android:layout_below="@id/layout_exs_left" >
+        android:layout_below="@id/layout_exs_left"
+        android:background="@mipmap/weather_banner">
 
-            <EditText
+            <TextView
                 android:id="@+id/txtWeather"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -221,7 +286,11 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteX="85dp" />
+                tools:layout_editor_absoluteX="85dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="25dp"
+                android:textColor="#ffffff"
+                android:textSize="20dp"/>
     </LinearLayout>
 
 
