--- a/app/src/main/res/layout/content_configure_profile.xml
+++ b/app/src/main/res/layout/content_configure_profile.xml
@@ -20,7 +20,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@mipmap/background">
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
